# iterable-extensions

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-test-publish.yml
docs/: reference.md  supporting_types.md
src/iterable_extensions/: __init__.py  iterable_extensions.py  types.py
tests/: test_iterable_extensions.py
