[project]
name = "iterable-extensions"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pim Mostert", email = "pim.mostert@pimmostert.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "extensionmethods>=0.1.3",
]

[project.urls]
Homepage = "https://github.com/Pim-Mostert/iterable-extensions"
Issues = "https://github.com/Pim-Mostert/iterable-extensions/issues"

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "test"},
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
]
docs = [
    "markdown-include>=0.8.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.2",
]
test = [
    "pytest>=9.0.2",
]

[tool.setuptools_scm]
tag_regex = 'v(\d+\.\d+\.\d+)$' # vX.Y.Z (major, minor, patch)
